feat: created UAT UI frontend design
